--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
    display: flex;
    align-items: center;
    justify-content: center;
+   position: relative;
 }
 
 .contenedor{
@@ -19,4 +20,14 @@ body{
    height: 24rem;
    border-radius: 15px;
    box-shadow: 0 15px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.contador{
+   position: absolute;
+   top: -150px;
+   left: 5px;
+}
+.contador > p{
+   font-weight: bold;
+   font-size: 11rem;
 }
